# 1c-mini-orchestrator_forCursor

./: .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  LICENSE  NOTICE  README.md  orchestrator.yaml  projects.yaml  pyproject.toml
config/: cursor-api-key.local.example  pfs-mcp.json
docs/: phase1-analyst-SDD.md  phase2-kickoff-brief.md  phase2-sdd-writer-SDD.md  phase3-implementer-SDD.md  phase3-kickoff-brief.md  phase4-auditor-SDD.md  phase4-kickoff-brief.md  phase4-stage8-signoff-convention.md  phase5-SDD.md  phase5-kickoff-brief.md  projects-pfs.md  writer-forcing-functions.md
prompts/: analyst.md  auditor.md  implementer.md  sdd-writer.md
schemas/: analysis_v2.py  audit_v1.py  impl_v1.py  sdd_v1.py
scripts/: _cursor-lib.ps1  _run-analyst.ps1  _run-auditor.ps1  _run-implementer.ps1  _run-sdd-writer.ps1  _run-smoke.ps1  kill-analyst.ps1  kill-implementer.ps1  kill-task.ps1  peek-analyst.ps1  peek-auditor.ps1  peek-task.ps1  spawn-analyst.cmd  spawn-analyst.ps1  spawn-auditor.cmd  spawn-auditor.ps1  spawn-implementer.cmd  spawn-implementer.ps1  spawn-sdd-writer.cmd  spawn-sdd-writer.ps1  validate-analysis.ps1  validate-audit.ps1  validate-impl.ps1  validate-sdd.ps1
skills/: v3-1c-anti-patterns.md  v3-1c-mcp-tools-guide.md  v3-analysis-protocol.md  v3-codemetadata-usage.md  v3-naparnik-usage.md
templates/: analyst-AGENTS.md.tpl  analyst-CLAUDE.md.tpl  auditor-AGENTS.md.tpl  auditor-CLAUDE.md.tpl  auditor-codex.toml.tpl  implementer-AGENTS.md.tpl  implementer-CLAUDE.md.tpl  implementer-mcp.json.tpl  sdd-writer-AGENTS.md.tpl  sdd-writer-CLAUDE.md.tpl
(+31 files in other folders)
