[project]
name = "1c-mini-orchestrator"
version = "0.2.0"
description = "Local lightweight orchestrator for 1C projects: analyst -> SDD-writer -> implementer -> auditor chain, Cursor Agents SDK edition."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Arman Kudaibergenov" },
]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "cursor-sdk>=0.1.5",
    "httpx>=0.27",
]

[tool.setuptools]
packages = []
